<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:id="@+id/txt_pregunta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:text="@string/text"
        android:textColor="?android:attr/textColorPrimaryNoDisable" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/true_button"
            android:text="@string/true_btn"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            tools:ignore="ButtonStyle"
            android:drawableLeft="@drawable/baseline_check_black_24"/>/>
        <Button
            android:id="@+id/false_button"
            android:text="@string/false_btn"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            tools:ignore="ButtonStyle"
            android:drawableLeft="@drawable/baseline_close_black_24"/>/>

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btn_atras"
            android:text="@string/btn_atras"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:drawableLeft="@drawable/baseline_arrow_left_black_24"/>
        <Button
            android:id="@+id/btn_siguiente"
            android:text="@string/btn_siguiente"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:drawableRight="@drawable/baseline_arrow_right_black_24"/>


    </LinearLayout>



</LinearLayout>















